[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = ""
authors = ["Barnaby Gray <barnybug@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "aoc2022.run:run"
